--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,16 +6,14 @@ RUN apt-get update \
     curl \
     zip \
     vim \
-    unzip \
-    libcurl4 \
-    libcurl4-openssl-dev \
+    unzip
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
-
-RUN chmod +x /usr/local/bin/install-php-extensions && sync && \
-    install-php-extensions http
+#ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
+#
+#RUN chmod +x /usr/local/bin/install-php-extensions && sync && \
+#    install-php-extensions http
 
 RUN docker-php-ext-install pdo pdo_mysql
 
